avformat/movenc: Skip unsupported video tracks in timecode generation

Fixes Ticket5414

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>